made changes for better code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card card1">
       <img src="./images/icon-sedans.svg" alt="car">
       <h2 class="car-style">Sedans</h2>
@@ -35,7 +35,7 @@
         rental and arrive in style.</p>
         <a class="btn dark-cyan" href="#">Learn More</a>
     </div>
-  </div>
+  </main>
   
 </body>
 </html>
